# tachi

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  PIPELINE_MIGRATION.md  README.en.md  README.lzh.md  README.md  README.zh-CN.md  V2_IMPROVEMENTS.md  build.sh  test_memory_server.py  validate_schema.py
.github/workflows/: build-bottles.yml  build-native.yml  update-homebrew-tap.yml
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-06.jsonl  omx-2026-04-05.jsonl  omx-2026-04-06.jsonl  session-history.jsonl  tmux-hook-2026-04-03.jsonl  tmux-hook-2026-04-05.jsonl  tmux-hook-2026-04-06.jsonl  tmux-hook-2026-04-08.jsonl  tmux-hook-2026-04-09.jsonl  turns-2026-04-03.jsonl  turns-2026-04-05.jsonl  turns-2026-04-06.jsonl  turns-2026-04-08.jsonl  turns-2026-04-09.jsonl
.omx/state/: auto-nudge-state.json  hud-state.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-fallback.pid  notify-hook-state.json  session.json  skill-active-state.json  tmux-hook-state.json  update-check.json
.omx/state/sessions/omx-1775461790606-ipbhew/: AGENTS.md  solo-execute-state.json
apps/tachi-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/tachi-desktop/src/: App.tsx  index.css
apps/tachi-desktop/src/components/: AgentCanvas.tsx  HubDashboard.tsx  Inspector.tsx  Sidebar.tsx
apps/tachi-desktop/src/services/: api.ts
crates/memory-core/: Cargo.toml
crates/memory-core/examples/: split_antigravity.rs
crates/memory-core/src/: db.rs  error.rs  foundry.rs  hub.rs  lib.rs  noise.rs  pack.rs  scorer.rs  search.rs  types.rs  vault.rs
crates/memory-core/src/db/: agent_state.rs  audit.rs  common.rs  domain.rs  foundry_jobs.rs  ghost.rs  graph.rs  hub_db.rs  memory_crud.rs  mod.rs  pack_db.rs  sandbox.rs  schema.rs  sqlite_vec.rs  state.rs  stats_gc.rs  tests.rs  vault_db.rs  virtual_capability.rs
crates/memory-node/: Cargo.toml  accuracy_test.js  bench.js  bench_old.js  import_jsonl.mjs  index.d.ts  index.js  index.mjs  migrate.mjs  migrate_db.mjs  package-lock.json  package.json  real_data_test.js  test.js
crates/memory-node/src/: lib.rs
crates/memory-python/: Cargo.toml
crates/memory-python/src/: lib.rs
crates/memory-server/: Cargo.toml
crates/memory-server/src/: bootstrap.rs  builtins.rs  capability_ops.rs  capture_gate.rs  clawdoctor.rs  cli.rs  cli_client.rs  copilot_ops.rs  dlq_ops.rs  doctor.rs  doctor_ops.rs  enrichment.rs  foundry_ops.rs  foundry_runtime_ops.rs  ghost_ops.rs  graph_state_ops.rs  handoff_ops.rs  hub_helpers.rs  hub_ops.rs  kanban.rs  llm.rs  main.rs  manifest.rs  mcp_connection.rs  mcp_pool.rs  mcp_proxy.rs  memory_ops.rs  memory_search_ops.rs  pack_ops.rs  pipeline.rs  pipeline_ops.rs  profiles.rs  project_db_ops.rs  prompts.rs  provenance.rs  rescue.rs  sandbox_ops.rs  server_handler.rs  server_methods.rs  shared_defs.rs  (+7 more)
crates/memory-server/src/foundry_runtime_ops/: capture.rs  handlers.rs  helpers.rs  maintenance.rs  mod.rs  recall.rs  tests.rs
crates/memory-server/src/hub_ops/: call.rs  discover.rs  evolve.rs  export.rs  mod.rs  quick_add.rs  register.rs  review.rs  security_scan.rs  virtual_cap.rs
crates/memory-server/src/tool_params/: agent.rs  foundry.rs  ghost.rs  hub.rs  memory.rs  mod.rs  pack.rs
docs/: INSTALL.md  PRD_v2.md  TACHI_NEXT.md  Tachi_Architect_Raw_Logs_2026.md  Tachi_Architecture_Review_2026.md  Tachi_V2_Core_Abstraction_2026.md  agent-brief-v4-review.md  code-review-superpowers.md  current-state.agent.yaml  final-review-2026-03-26.md  kanban-design.md  kernel-surface-v1.md  model-lane-benchmark-round2.md  neural-foundry-v1.md  tachi-desktop-decision.md  tachi-evolution-report-2026-03-25.md  tool-profile-plan.md
docs/superpowers/specs/: 2026-03-23-hub-phase2-mcp-proxy-design.md
integrations/openclaw/: .env.example  CHANGELOG.md  README.md  backfill.py  benchmark_extraction.ts  benchmark_extraction_result.json  config.d.ts  config.js  config.ts  constants.d.ts  constants.js  constants.ts  extractor.d.ts  extractor.js  extractor.ts  index.d.ts  index.js  index.ts  mcp-client.d.ts  mcp-client.js  mcp-client.ts  openclaw-plugin-sdk.d.ts  openclaw.plugin.json  package-lock.json  package.json  reranker.d.ts  reranker.js  scorer.d.ts  scorer.js  scorer.ts  store.d.ts  store.js  store.ts  test-glm4-flash.py  test-query.ts  tsconfig.json
mcp/: config.py  embedding.py  event_queue.py  extractor.py  migrate.py  requirements.txt  reranker.py  server.py  store.py  test_mcp.py
mcp/shadow/: benchmark.py  consistency_check.py  dual_write.py
mcp/workers/: __init__.py  base.py  causal.py  consolidator.py  distiller.py  extractor.py  launcher.py  main.py  utils.py
prompts/: tachi_addendum.md
scripts/: backfill_consolidator.py  backfill_gemini_cli.py  backfill_vectors.py  install.sh  install_openclaw_ext.sh  load_skills_to_hub.py  merge_memory_dbs.py  migrate_antigravity_split.py  register_mcps_to_hub.py  setup_agent_mcp.py  tachi-skill.sh  update_homebrew_formula.py
tests/: test_echo_mcp_server.py
tmp/: research_harness_plan.md
