[workspace]
members = [
    "crates/memory-core",
    "crates/memory-node",
    "crates/memory-python",
    "crates/memory-server",
]
resolver = "2"

[profile.release]
lto = true
strip = true

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
libsimple = { version = "0.3.0", features = ["rusqlite"] }
sqlite-vec = "0.1.7-alpha.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.10.0"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
