[package]
name = "memory-core"
version = "0.10.0"
edition = "2021"
description = "Core memory storage and search engine for OpenClaw/Antigravity"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
libsimple = "~0.7"
sqlite-vec = { workspace = true }

[dev-dependencies]
tempfile = "3"
