[package]
name = "memory-core"
version = "0.16.4"
edition = "2021"
description = "Core memory storage and search engine for OpenClaw/Antigravity"
license = "AGPL-3.0-only"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
libsimple = "~0.7"
sqlite-vec = { workspace = true }

[dev-dependencies]
tempfile = "3"
