[package]
name = "memory-node"
version = "0.10.0"
edition = "2021"
description = "NAPI-RS Node.js binding for memory-core"

[lib]
crate-type = ["cdylib"]

[dependencies]
memory-core = { path = "../memory-core" }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
