[package]
name = "memory-server"
version = "0.12.0"
edition = "2021"

[dependencies]
memory-core = { path = "../memory-core" }
rmcp = { version = "1.2", features = ["server", "transport-io", "macros", "client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "server-side-http", "transport-streamable-http-server", "schemars"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
dirs = "5.0"
dotenvy = "0.15"
reqwest = { package = "reqwest", version = "0.12", features = ["json"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "memory-server"
path = "src/main.rs"
